--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,54 +1,111 @@
 variables:
-    # Das Image aus welchen Branch soll mit `latest` getagt werden?
-    # Leer lassen, wenn der current branch der master branch sein soll
-    CURRENT_BRANCH: ""
-    
-    CONTAINER_TEST_IMAGE: docker.rz.tu-harburg.de:5000/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME:$CI_PIPELINE_ID
-    CONTAINER_VERSIONED_IMAGE: docker.rz.tu-harburg.de:5000/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME:$CI_COMMIT_REF_NAME
-    CONTAINER_RELEASE_IMAGE: docker.rz.tu-harburg.de:5000/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME:latest
+    CONTAINER_RELEASE_IMAGE: docker.rz.tu-harburg.de:5000/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
+    LATEST_VERSION: 'LATEST'
+
+.build_script_template:
+  script: &build_script_definition
+    - pwd
+    - key="PythonSSLLabs ${VERSION}"
+
+    - version=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .version')
+    - if [[ -z $version ]]; then exit 1; fi
+    - version=$(echo $version | sed -e 's/%2B/+/g')
+
+    # - download=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .download')
+    # - if [[ -z $download ]]; then exit 1; fi
+
+    - sudo docker build --build-arg DOWNLOAD="${download}" --build-arg VERSION="${version}" --no-cache --pull -t "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}" "${VERSION}"/"${VARIANT}"
+
+.build_before_script_template:
+  before_script: &build_before_script_definition
+    - pwd
+    - git submodule update --init --recursive
+
+.deploy_script_template:
+  script: &deploy_script_definition
+    - pwd
+    - sudo docker push "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"
+    - if [ ! -z ${LATEST_VERSION} ] && [ "${LATEST_VERSION}" == "${VERSION}${VARIANT:+-$VARIANT}" ]; then sudo docker tag "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}" "${CONTAINER_RELEASE_IMAGE}:latest"; sudo docker push "${CONTAINER_RELEASE_IMAGE}:latest"; fi
+
+.build_branches_script_template:
+  script: &build_branches_script_definition
+    - pwd
+    - key="Linkchecker ${VERSION}"
+
+    - version=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .version')
+    - if [[ -z $version ]]; then exit 1; fi
+    - version=$(echo $version | sed -e 's/%2B/+/g')
+
+    - download=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .download')
+    - if [[ -z $download ]]; then exit 1; fi
+
+    - sudo docker build --build-arg DOWNLOAD="${download}" --build-arg VERSION="${version}" --pull -t "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"_"${CI_COMMIT_REF_NAME}" "${VERSION}"/"${VARIANT}"
+
+.build_branches_before_script_template:
+  before_script: &build_branches_before_script_definition
+    - pwd
+    - git submodule update --init --recursive
+
+.deploy_branches_script_template:
+  script: &deploy_branches_script_definition
+    - pwd
+    - sudo docker push "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"_"${CI_COMMIT_REF_NAME}"
 
 stages:
+  - build
+  - deploy
+  - build_siblings
+
+build:latest:
+  stage: build
+  retry: 2
+  only:
+    - master
+  tags:
     - build
+  variables:
+    VERSION: "LATEST"
+    VARIANT: ""
+  before_script: *build_before_script_definition
+  script: *build_script_definition
+
+deploy:latest:
+  stage: deploy
+  needs: ["build:latest"]
+  tags:
     - deploy
-    
-docker_image:
-    stage: build
-    only:
-        - tags
-        - triggers        
-        - branches
-    tags:
-        - build
-    script:
-        # Nur, wenn es keinen CURRENT_BRANCH gibt oder wenn es einen gibt und es aber nicht der Master-Branch ist
-        - if [ -z ${CURRENT_BRANCH} ] || [ "${CI_COMMIT_REF_NAME}" != "master" ]; then sudo docker build --no-cache --pull -t "${CONTAINER_TEST_IMAGE}" .; fi
-    retry: 2
+  only:
+    - master
+  variables:
+    VERSION: "LATEST"
+    VARIANT: ""
+  script: *deploy_script_definition
 
-# Deployment der Images `latest` 
-deploy:master:
-    stage: deploy
-    script:
-        - if [ -z ${CURRENT_BRANCH} ]; then sudo docker tag "${CONTAINER_TEST_IMAGE}" "${CONTAINER_RELEASE_IMAGE}"; fi
-        - if [ -z ${CURRENT_BRANCH} ]; then sudo docker push "${CONTAINER_RELEASE_IMAGE}"; fi
-    tags:
-        - deploy
-    only:
-        - master
+build:branches:latest:
+  stage: build
+  retry: 2
+  only:
+    - branches
+  except:
+    - master
+  tags:
+    - build
+  variables:
+    VERSION: "LATEST"
+    VARIANT: ""
+  before_script: *build_branches_before_script_definition
+  script: *build_branches_script_definition
 
-# Deployment der Images mit Versionstag und gegebenenfalls `latest`
-deploy:version:
-    stage: deploy
-    script:
-        - sudo docker tag "${CONTAINER_TEST_IMAGE}" "$CONTAINER_VERSIONED_IMAGE"
-        - if [ ! -z ${CURRENT_BRANCH} ] && [ "${CI_COMMIT_REF_NAME}" == "${CURRENT_BRANCH}" ]; then sudo docker tag "${CONTAINER_TEST_IMAGE}" "${CONTAINER_RELEASE_IMAGE}"; fi
-        - sudo docker push "${CONTAINER_VERSIONED_IMAGE}"
-        - if [ ! -z ${CURRENT_BRANCH} ] && [ "${CI_COMMIT_REF_NAME}" == "${CURRENT_BRANCH}" ]; then sudo docker push "${CONTAINER_RELEASE_IMAGE}"; fi
-    tags:
-        - deploy
-    only:
-        - branches
-        - /^v.*$/
-        - /^.*-release$/
-        - /^.*-stable$/
-    except:
-        - master
+deploy:branches:latest:
+  stage: deploy
+  needs: ["build:branches:latest"]
+  tags:
+    - deploy
+  only:
+    - branches
+  except:
+    - master
+  variables:
+    VERSION: "LATEST"
+    VARIANT: ""
+  script: *deploy_branches_script_definition
