--- a/LATEST/Dockerfile
+++ b/LATEST/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update && apt-get -y upgrade
 
 RUN pip install requests
 
-RUN git clone -b ${VERSION} https://github.com/takeshixx/python-ssllabs.git /opt/python-ssllabs
+RUN git clone -b v${VERSION} https://github.com/takeshixx/python-ssllabs.git /opt/python-ssllabs
 
 WORKDIR /opt/python-ssllabs/
 
