--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,55 +1,58 @@
 variables:
     CONTAINER_RELEASE_IMAGE: docker.rz.tu-harburg.de:5000/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
     LATEST_VERSION: 'LATEST'
+    APP: 'PythonSSLLabs'
+    APP_OVERVIEW_URL: https://cgi.tu-harburg.de/~rztwww/Software/program_file.json
+    KEY: "${APP} ${VERSION}"
+    # MAPPING: '0:0.0.1-amd64','1:1.0.1-amd64'
 
 .build_script_template:
   script: &build_script_definition
     - pwd
-    - key="PythonSSLLabs ${VERSION}"
 
-    - version=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .version')
-    - if [[ -z $version ]]; then exit 1; fi
+    - version=$(curl -s ${APP_OVERVIEW_URL} | jq --arg KEY "$KEY" --arg APP "$APP" --raw-output '.[$APP] | .[$KEY] | .version')
+    - if [[ -z $version ]] || [[ $version == "null" ]]; then exit 1; fi
     - version=$(echo $version | sed -e 's/%2B/+/g')
 
-    # - download=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .download')
-    # - if [[ -z $download ]]; then exit 1; fi
+    - download=$(curl -s ${APP_OVERVIEW_URL} | jq --arg KEY "$KEY" --arg APP "$APP" --raw-output '.[$APP] | .[$KEY] | .download')
+    - if [[ -z $download ]] || [[ $download == "null" ]]; then exit 1; fi
 
     - sudo docker build --build-arg DOWNLOAD="${download}" --build-arg VERSION="${version}" --no-cache --pull -t "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}" "${VERSION}"/"${VARIANT}"
-
-.build_before_script_template:
-  before_script: &build_before_script_definition
-    - pwd
-    - git submodule update --init --recursive
-
-.deploy_script_template:
-  script: &deploy_script_definition
-    - pwd
-    - sudo docker push "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"
-    - if [ ! -z ${LATEST_VERSION} ] && [ "${LATEST_VERSION}" == "${VERSION}${VARIANT:+-$VARIANT}" ]; then sudo docker tag "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}" "${CONTAINER_RELEASE_IMAGE}:latest"; sudo docker push "${CONTAINER_RELEASE_IMAGE}:latest"; fi
 
 .build_branches_script_template:
   script: &build_branches_script_definition
     - pwd
-    - key="Linkchecker ${VERSION}"
 
-    - version=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .version')
-    - if [[ -z $version ]]; then exit 1; fi
+    - version=$(curl -s ${APP_OVERVIEW_URL} | jq --arg KEY "$KEY" --arg APP "$APP" --raw-output '.[$APP] | .[$KEY] | .version')
+    - if [[ -z $version ]] || [[ $version == "null" ]]; then exit 1; fi
     - version=$(echo $version | sed -e 's/%2B/+/g')
 
-    - download=$(curl -s https://cgi.tu-harburg.de/~rztwww/Software/program_file.json | jq --arg KEY "$key" --raw-output '.[$KEY] | .download')
-    - if [[ -z $download ]]; then exit 1; fi
+    - download=$(curl -s ${APP_OVERVIEW_URL} | jq --arg KEY "$KEY" --arg APP "$APP" --raw-output '.[$APP] | .[$KEY] | .download')
+    - if [[ -z $download ]] || [[ $download == "null" ]]; then exit 1; fi
 
-    - sudo docker build --build-arg DOWNLOAD="${download}" --build-arg VERSION="${version}" --pull -t "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"_"${CI_COMMIT_REF_NAME}" "${VERSION}"/"${VARIANT}"
+    - sudo docker build --build-arg DOWNLOAD="${download}" --build-arg VERSION="${version}" --pull -t "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"_"${CI_COMMIT_REF_NAME}" "${VERSION}"/"${VARIANT}"    
+
+.build_before_script_template:
+    before_script:  &build_before_script_definition
+        - pwd
+        - git submodule update --init --recursive
+
+.deploy_script_template:
+    script:  &deploy_script_definition
+        - pwd
+        - sudo docker push "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"
+        - if [ ! -z ${LATEST_VERSION} ] && [ "${LATEST_VERSION}" == "${VERSION}${VARIANT:+-$VARIANT}" ]; then sudo docker tag "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}" "${CONTAINER_RELEASE_IMAGE}:latest"; sudo docker push "${CONTAINER_RELEASE_IMAGE}:latest"; fi
 
 .build_branches_before_script_template:
-  before_script: &build_branches_before_script_definition
-    - pwd
-    - git submodule update --init --recursive
+    before_script:  &build_branches_before_script_definition
+        - pwd
+        - git submodule update --init --recursive
 
 .deploy_branches_script_template:
-  script: &deploy_branches_script_definition
-    - pwd
-    - sudo docker push "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"_"${CI_COMMIT_REF_NAME}"
+    script:  &deploy_branches_script_definition
+        - pwd
+        - sudo docker push "${CONTAINER_RELEASE_IMAGE}":"${VERSION}${VARIANT:+-$VARIANT}"_"${CI_COMMIT_REF_NAME}"
+
 
 stages:
   - build
